@@ -1,3 +1,7 @@
+2011-08-03  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-misc.el (sqlplus-mode-hook): Fix sqlplus.
+
 2011-08-02  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el (scroll-step): set scroll-step to 1.
